terraform/aws-rds-1/net.tf
#
# This is a terraform script to configure aws for pgconf2019
#
# This contains the network configuration.
#
# Copyright (c) 2019 by Jeffrey Zampieron. All rights reserved.
#
# Created 13-March-2019 by Jeffrey Zampieron <jzampieron@zproject.net>
#
# License: See included LICENSE.md
#

variable "operator_ip" {} # Set via env variable.

resource "aws_vpc" "jzpgconf2019" {
  cidr_block = "10.0.0.0/16"
}

resource "aws_subnet" "jzpgconf2019" {
  vpc_id            = "${aws_vpc.jzpgconf2019.id}"
  availability_zone = "us-east-1c"
  cidr_block        = "10.0.0.0/16"
}

resource "aws_subnet" "jzpgconf2019-2" {
  vpc_id            = "${aws_vpc.jzpgconf2019.id}"
  availability_zone = "us-east-1b"
  cidr_block        = "10.1.0.0/16"
}

resource "aws_db_subnet_group" "jzpgconf2019" {
  name       = "jzpgconf2019_dbsub"
  subnet_ids = ["${aws_subnet.jzpgconf2019.id}"]
}

resource "aws_security_group" "allow_ssh" {
  name        = "jzpgconfig2019_allow_ssh"
  description = "Allow SSH inbound traffic"
  vpc_id      = "${aws_vpc.jzpgconf2019.id}"

  ingress {
    # SSH (change to whatever ports you need)
    from_port   = 22
    to_port     = 22
    protocol    = "-1"
    # Please restrict your ingress to only necessary IPs and ports.
    # Opening to 0.0.0.0/0 can lead to security vulnerabilities.
    cidr_blocks = [ "${var.operator_ip}" ]# add a CIDR block here
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
    #prefix_list_ids = ["pl-12c4e678"]
  }
}
